# occurences-prociv-db-job

./: .gitignore  Cargo.toml  Dockerfile.prod  README.md  build.rs  justfile
.github/workflows/: build_and_push.yml  push_to_main.yml
.sqlx/: query-06c70dc782ee6a86085504210d2029bb05ca46ac458c5952d4b57a2da836936a.json  query-0e3102b1883bcf10d65d716e4d48719c4cab622177b9a92d3352a19568f06f80.json  query-0f71e7379e3fcd25127b01e55296c4953db81262a2a760dba02601a9b19b3324.json  query-0fa09d006b05a668cd342a6ab3ef6b448375a5b8790c09ba99d43632eff119a6.json  query-1430c163cacf920ddfe670d007feee252f6b1475411d951cd66de91318631e5b.json  query-1defa557c37fdb9fca325b97189dac1d92a83cbb83213dee2918c8b49dc682fa.json  query-31f5d12fb95e6da824bba6d5d0393c5f1c8fadc1fca9a1d107d585e50dfafa35.json  query-32ecc1da8ae87c45cbfad81bffd316ebb7fe31c5e527d32cdbebaaa32281682c.json  query-38296e60ba8461a363c845da5eeced34bad273fe2a54840926bf9cee839a63e0.json  query-38a5d96ad5d9ff6f773d0fcd9d71858ecff4f3ba4dbb0380dd3c3774337ca18e.json  query-529230b2ba46adfb3fe8db0a03fcb8245d442c0426938153c90709e77d85b577.json  query-5a84160e8eb18aba85721f84673cd29f0aec71ac75c070d9a9a9ff0e61a08b55.json  query-60cb95a207019250cc3e30c29960a006f0e1b4b42cbcb740901648b6ce6cd7d8.json  query-659ec66917a2269b63b6b87e32929fd6c22a5368120c885fc6eabf75593293a4.json  query-723f68f8ce9986ed2447595e991d9f895df6517d6d79e89cb011bb7e9babd985.json  query-8d2cd27c04ae5876fdc9cb8cf937a42a2bf36dbce341d58db37361a27c5edeba.json  query-8e4d9ef32ed53f15b06676eebf3df989b22a38aea41aa99cbed540d2fd6aa6ce.json  query-985393a34af397a13d8a03f043b55ae7cb1c39a8ec764d5114d59e8d06626f81.json  query-a1a0a04725b369a2350a8c943b44e0c85aee3f46817f9c1bf427fefda19e49c9.json  query-a1d7dd143b883449fa3badde7160489c7ee703ebbd1b6a42a57c27329915a41b.json  query-b5a41f71db14513bcef37e803aece42cfcd1fa3dff7a69d3205d38579be565df.json  query-b863e849ca8c47e2b03bc068d84be3a7fafca8c6aa0ee010b1c78b5ec6fd1a3c.json  query-c326d7894b91c73b5db8e57bd80ad84773eef6d4762e7dcc4f5fbdec2c7e6062.json  query-c635ad6564ff6c5465e2f16a3360cd46d2d5c5796a07c3decb4be550ba879537.json  query-c76b00af37639f65f2d3fc33b1cad1b6a2a8f5dab7e0a5183d3562dd614abee7.json  query-d8f81ce8f101a8f09ad2cde5a140755a48bb8610fb37a337960709ed5ba8fa22.json  query-dc8c5eb3e4cbff6cea7c0ba5c7425925399b132336791239d5a69d049f873161.json  query-e564de4ff3ea0d652e17e82e40aa4720da89c50787a4f852147cbe24309299bd.json
database-macros/: Cargo.toml
database-macros/src/: lib.rs
database-utils/: Cargo.toml
database-utils/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20240928232813_init.up.sql  20240928234120_init_tables.down.sql  20240928234120_init_tables.up.sql  20240929134043_occurrence_kinds.down.sql  20240929134043_occurrence_kinds.up.sql  20240929151321_occurrences.down.sql  20240929151321_occurrences.up.sql
occurences-prociv-db-job/: Cargo.toml  build.rs
occurences-prociv-db-job/src/: lib.rs  main.rs
occurences-prociv-db-job/src/occurrences/: mod.rs
occurences-prociv-db-job/src/occurrences/convert/: code_map.rs  mod.rs
occurences-prociv-db-job/tests/: lookup_tables.rs  setup.rs
src/: main.rs
