[package]
name = "database-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
database-macros = { version = "0.1.0", path = "../database-macros" }
sqlx = { version = "0.8.2", default-features = false, features = [
    "postgres",
    "macros",
] }
strum = "0.26.3"
thiserror = "1.0.63"
