[package]
name = "occurences-prociv-db-job"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
    "bigdecimal",
    "macros",
    "migrate"
] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-stream = "0.3.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = { version = "0.12.7", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "stream",
    "multipart",
    "json",
] }
sentry = { version = "0.34.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "anyhow",
    "debug-images",
    "reqwest",
    "rustls",
] }
sentry-tracing = "0.34.0"
database-utils = { version = "0.1.0", path = "../database-utils" }
strum = { version = "0.26.3", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.89"
protox = "0.7.1"
tonic-build = "0.12.3"
reqwest = { version = "0.12.7", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "stream",
    "multipart",
    "json",
] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
zip-extract = "0.2.1"

[dev-dependencies]
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.1", features = ["postgres"] }
